Modified images path as recommended by mentor

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       <!-- The slideshow/carousel -->
       <div class="carousel-inner">
       <div class="carousel-item active">
-      <img src="C:\Users\RunshawStudent\OneDrive - Runshaw College\Pactise\Andrea Piacquadio Pexels.jpg" alt="Los Angeles" class="d-block w-100">
+      <img src="Andrea Piacquadio Pexels.jpg" alt="Woman Trainning with kettlebell" class="d-block w-100">
       </div>
       <div class="carousel-item">
-      <img src="C:\Users\RunshawStudent\OneDrive - Runshaw College\Pactise\Andrea Piacquadio Pexels..jpg" alt="Chicago" class="d-block w-100">
+      <img src="Andrea Piacquadio Pexels..jpg" alt="kettlebells" class="d-block w-100">
       </div>
       <div class="carousel-item">
-      <img src="C:\Users\RunshawStudent\OneDrive - Runshaw College\Pactise\taco-fleur-unsplash.jpg" alt="New York" class="d-block w-100">
+      <img src="taco-fleur-unsplash.jpg" alt="Man trainning with kettlebells" class="d-block w-100">
       </div>
       </div>
     
