--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="Geize Santos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="stylepractice.css">
     <title>Kettlebell Studio</title>
     </head>
@@ -36,9 +37,9 @@
 
       <!-- Indicators/dots -->
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#homecarousel" data-bs-slide-to="0" class="active"></button>
-        <button type="button" data-bs-target="#homecarousel" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#homecarousel" data-bs-slide-to="2"></button>
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="2"></button>
       </div>
     
       <!-- The slideshow/carousel -->
@@ -55,10 +56,10 @@
       </div>
     
       <!-- Left and right controls/icons -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon"></span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
       <span class="carousel-control-next-icon"></span>
       </button>
      </div>
