Linked the pages together

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="container-fluid">
     <ul class="navbar-nav">
     <li class="nav-item">
-    <a class="nav-link" href="#">The studio</a>
+    <a class="nav-link" href="index.html">The studio</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" href="#">Classes Timetable</a>
+    <a class="nav-link" href="timetable.html">Classes Timetable</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" href="#">Kettlebell Trainning</a>
+    <a class="nav-link" href="trainning.html">Kettlebell Trainning</a>
     </li>
     </ul>
     </div>
