--- a/timetable.html
+++ b/timetable.html
@@ -30,3 +30,13 @@
     </div>
     </nav>
     </header> 
+    <br>
+    <footer class="text-uppercase">
+      <span>Find us on:</span>
+      <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+      <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+      <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+      <p>Copyrights @ Geize Santos</p> 
+    </footer>
+  </body>
+  </html>
