--- a/trainning.html
+++ b/trainning.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="stylepractice.css">
+    <link rel="stylesheet" href="styletrainning.css">
     <title>Kettlebell Studio</title>
     </head>
     <body>
@@ -31,6 +31,13 @@
     </nav>
     </header> 
     <br><footer class="text-uppercase">
+    <main>
+    <div class="bg-image"></div>
+    <div class="bg-text">
+    <h1>Trainning with Kettlebells</h1>
+    <p>Kettlebells</p>
+    </div>
+        </main>
         <span>Find us on:</span>
         <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
