Corrected some mistakes on my code

--- a/timetable.html
+++ b/timetable.html
@@ -31,6 +31,12 @@
     </nav>
     </header> 
     <br>
+    <div class="hero-container">
+    <img src="Andrea Piacquadio Pexels..jpg" alt="kettlebell image" class="hero-image">
+    <div class="hero-text">
+    <h1>Start your strength journey</h1>
+    </div>
+    </div>
     <footer class="text-uppercase">
       <span>Find us on:</span>
       <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
