adding opacity to the styling of timetable

--- a/timetable.html
+++ b/timetable.html
@@ -32,7 +32,7 @@
     </header>
     <br>
     <div class="hero-container">
-        <img src="Andrea Piacquadio Pexels.jpg" alt="Kettlebell image" class="hero-image">
+        <img src="Andrea Piacquadio Pexels..jpg" alt="Kettlebell image" class="hero-image">
         <div class="hero-text">
             <h1>Start your strength journey</h1>
         </div>
