small changes to code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a class="nav-link" href="timetable.html">Classes Timetable</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" href="trainning.html">Kettlebell Trainning</a>
+    <a class="nav-link" href="training.html">Kettlebell Trainning</a>
     </li>
     </ul>
     </div>
