--- a/training.html
+++ b/training.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng-US">
+<html lang="en">
   <head>
   <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
     <a class="nav-link" href="timetable.html">Classes Timetable</a>
     </li>
     <li class="nav-item">
-    <a class="nav-link" href="trainning.html">Kettlebell Trainning</a>
+    <a class="nav-link" href="training.html">Kettlebell Trainning</a>
     </li>
     </ul>
     </div>
