Changed the file name

--- a/training.html
+++ b/training.html
@@ -1,42 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Kettlebell studio offering classes for kettlebell hardstyle and kettlebell sports">
-	<meta name="keywords" content="kettlebell trainning, hardstyle kettlebell,studio, gym, sports ketllebell">
-	<meta name="author" content="Geize Santos">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kettlebell studio offering classes for kettlebell hardstyle and kettlebell sports">
+    <meta name="keywords" content="kettlebell training, hardstyle kettlebell, studio, gym, sports kettlebell">
+    <meta name="author" content="Geize Santos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="styletrainning.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="styletraining.css">
     <title>Kettlebell Studio</title>
-    </head>
-    <body>
+</head>
+<body>
     <header>
-    <nav class="navbar navbar-expand-sm bg-light">
-    <div class="container-fluid">
-    <ul class="navbar-nav">
-    <li class="nav-item">
-    <a class="nav-link" href="index.html">The studio</a>
-    </li>
-    <li class="nav-item">
-    <a class="nav-link" href="timetable.html">Classes Timetable</a>
-    </li>
-    <li class="nav-item">
-    <a class="nav-link" href="training.html">Kettlebell Trainning</a>
-    </li>
-    </ul>
-    </div>
-    </nav>
-    </header> 
-    <br>
+        <nav class="navbar navbar-expand-sm bg-light">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">The Studio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="timetable.html">Classes Timetable</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="training.html">Kettlebell Training</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Start Your Strength Journey</h1>
+                <p>Join our Kettlebell training classes and discover the benefits of hardstyle and sports kettlebell techniques.</p>
+            </div>
+        </section>
+        
+        <section class="about-training">
+            <div class="container">
+                <h2>About Kettlebell Training</h2>
+                <p>Kettlebell training is a dynamic and effective form of exercise that combines strength, cardio, and flexibility training. Our studio offers specialized classes in both hardstyle kettlebell, focusing on power and strength, and sports kettlebell, emphasizing endurance and technique.</p>
+            </div>
+        </section>
+    </main>
+
     <footer class="text-uppercase">
         <span>Find us on:</span>
         <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
         <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
         <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
-        <p>Copyrights @ Geize Santos</p> 
-      </footer>
-    </body>
-    </html>
+        <p>&copy; Geize Santos</p> 
+    </footer>
+</body>
+</html>
